# BiliResourceDownloader

./: LICENSE  README.md  auto-imports.d.ts  bun.lockb  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  typed-router.d.ts  vite.config.ts
.github/workflows/: android-test.yml  main.yaml
src/: APIFetch.ts  App.vue  cachedAPIFetch.ts  cliboardListener.ts  downloadManager.ts  linkResolver.ts  loginManager.ts  lottery.ts  main.ts  style.css  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/invoke/: mod.rs
src/components/: AppBackground.vue  BatchDownloadButton.vue  CustomDivider.vue  DebugButton.vue  DownloadManager.vue  GarbSearchCard.vue  Greet.vue  ImageCard.vue  ImageVideoCard.vue  LoginManager.vue  LoginRequired.vue  Lottery.vue  LotteryCard.vue  LottieAnimationCard.vue  QRCodeDialogButton.vue  SVGACard.vue  SingleLotteryPage.vue  UPInfo.vue  VideoCard.vue
src/pages/: Lottery.vue  [...path].vue  about.vue  download.vue  index.vue  liveroom.vue  login.vue  loginManager.ts  lottery.vue  settings.vue
src/pages/dynamic/: [id].vue
src/pages/emoji/: [id].vue
src/pages/liveroom/: [id].vue
src/pages/search/: emoji.vue  garb.vue  general.vue
src/pages/space/: [id].vue
src/pages/suit/: [id].vue
src/pages/tool/: lottie.vue  (+2 more)
src/utils/: cliboardListener.ts  debug.ts  deviceUtils.ts  downloadManager.ts  globalConfig.ts  image.ts  linkResolver.ts  loginManager.ts  wbi.ts
(+6 files in other folders)
